# ai-digital-card

./: .bandit.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .safety_config.yml  404.html  ANTI_SLOP_CHECK.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT_REPORT.md  BASELINE.md  BASELINE_INVITE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DESIGN_CHECKLIST.md  DEVELOPMENT_BASELINE.md  Dockerfile  FEATURE_ADAPTER.md  FOLO_DESIGN_TOKENS_README.md  Makefile  P1-P2可行性方案_乘黄P9.md  PRD.md  PRODUCT.md  README.md  README.txt  README_GITHUB_SECRETS.md  RELEASE_v1.1.0-login-baseline.md  RELEASE_v1.md  SECURITY.md  START_GUIDE.md  TEST_COVERAGE_GAPS.md  XUNFU_MINI_README.md  _10-10差距分析_2026-06-02.md  _ai_engine_analysis.md  _coze_injection.md  _design_tokens.css  _全景扫描与工业级对标_2026-06-02.md  _全景架构扫描_2026-06-02_v2.md  _原子化收割清单.md  (+49 more)
backend/: .bandit.yml  .coverage  .dockerignore  .env.bak  .env.encrypted  .env.example  .env.production.bak  .pre-commit-config.yaml  Dockerfile  Makefile  MutationTest.md  _analyze_logs.py  _bandit_analyze.py  _bandit_analyze2.py  _check_db.py  _check_gateway.py  _check_python.py  _check_routes.py  _cron_process_queue.py  _import_check.py  _run_evo.py  _run_status.py  _test_import.py  _test_imports.py  _test_secret_manager.py  alembic.ini  check_pydantic.py  cleanup_audit_report.md  deploy_key_migration.py  docker-compose.yml  e2e_test_match_v2.py  e2e_test_results.json  ecosystem.config.js  full_flow_results.json  health_monitor.py  key_manager.py  main.py  mutmut_config.py  pyproject.toml  rag_scan_report_match.md  (+20 more)
backend/ai_service/: requirements.txt
backend/alembic/: env.py
backend/analysis/: gaia_feedback.md  matching_engine_sag_report.md  resource-platform-audit.md  resource-platform-fix-report.md  xunfu-code-recovery.md
backend/app/: API_VERSIONING.md  ERROR_CODES.md  MIGRATION_RUNBOOK.md  MIGRATION_STATUS.md  __init__.py  api_standards.py  auth_jwt.py  business_metrics.py  config.py  database.py  database.py.bak  database_monitor.py  db_migration.py  graceful_shutdown.py  health.py  i18n.py  i18n.py.bak.20260627  lifespan.py  slo_tracker.py
backend/benchmarks/: api_benchmark.py
backend/data/: _check_db.py  _fix_platforms.py  _test_query.py  digital_brochure.db.bak  jwt_rsa_private.pem  jwt_rsa_public.pem  learning_log.jsonl  online_weights.json  sales_prediction_model.json  v2_training_data_augmented_stats.txt
backend/docs/: API_DOCS_PORTAL.md  API_VERSIONING.md  APP_STORE.md  CONTACTS_IMPORT_TECH_ARCH.md  DB_REPLICATION.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_PORTAL.md  DR_PLAN.md  ECOSYSTEM_OPS.md  GLOBAL_DEPLOYMENT.md  GROWTH_ENGINE.md  INDEX.md  KAKAOPAY_SETUP.md  OPEN_API_V1.md  PRICING_ENGINE.md  RATE_LIMIT_SDK.md  SSR_SETUP.md  V2_MATCH_API_GUIDE.md  WEBHOOKS.md  api_completeness_test.json  链客宝-通讯录导入-PRD.md
backend/models/: matching_model.pt  matching_scalers.npy  online_learning_report_20260713_214829.json  online_learning_report_20260713_214908.json  training_report.json
backend/scripts/: _api_test_runner.py  _debug_path.py  _deploy_cleanup.py  _deploy_verify.py  _fix_memberships.py  _run_online_cron.py  _run_online_launcher.py  _seed_50_users.py  _test_all.py  _test_create.py  auto_tag_cards.py  auto_training_pipeline.sh  auto_translate.py  (+33 more)
(+1616 files in other folders)
